# nix-config

./: .envrc  .gitignore  flake.nix  justfile  outputs.nix
.github/workflows/: cd.yaml  ci.yaml
modules/: den.nix
modules/a/: alacritty.nix  direnv.nix  micro.nix  nix.nix  starship.nix  tmux.nix  zsh.nix
modules/a/applications/: aerospace.nix  desktop.nix  discord.nix  element.nix  homebrew.nix  rectangle.nix  sketchybar.nix  spotify.nix
modules/a/development/: claude.nix  emacs.nix  git.nix  nixtools.nix  vcs.nix
modules/a/programs/: aws.nix  latex.nix  pandoc.nix  yazi.nix
modules/a/terminal/: alacritty.nix  direnv.nix  starship.nix  tmux.nix  zsh.nix
modules/a/trusted/: gpg.nix  ssh.nix
modules/a/virtualization/: colima.nix  docker.nix  (+1 more)
modules/flake/: actions.nix  dendritic.nix  flake-parts.nix  formatter.nix  imports.nix  nixConfig.nix  options.nix  packages.nix  shell.nix  templates.nix
modules/my/: defaults.nix  hosts.nix  users.nix
modules/our/: cache.nix  darwin-base.nix  darwin-system.nix  default.nix  nix-index.nix  nix-registry.nix  nix-settings.nix  secrets.nix  secrets.yaml  sops.yaml  terminal.nix  theme.nix  timezone.nix  xdg.nix
nix/: flake-parts.nix  packages.nix  perSystem.nix  shell.nix  templates.nix
nix/_templates/crates-rs/: Cargo.toml  Justfile  flake.nix
nix/_templates/crates-rs/crates/other-rs/: Cargo.toml
nix/_templates/crates-rs/nix/: default.nix  lib.nix
nix/_templates/crates-rs/src/: lib.rs
nix/_templates/crates-rs/tests/: main.rs
nix/ci/: default.nix
templates/crate-rs/: .gitignore  Cargo.toml
(+100 files in other folders)
